[package]
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"
readme = "README.md"
name = "edvertize"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
embedded-hal = "0.2.3"
alloc-cortex-m = {git="https://github.com/rust-embedded/alloc-cortex-m.git"}
[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["rt", "stm32f103", "high"]

# this lets you use `cargo fix`!
[[bin]]
name = "edvertize"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
